# RedUpdate-rust

./: Cargo.toml  TODO.md
frontend/: ihatejssomuch.js  index.html
src/: main.rs
