[package]
name = "red_update-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = [
    "futures-core",
    "async-process",
    "async-attributes",
] }
bytes = "1.1.0"
warp = "0.3.1"
serde_json = "*"
#log = { version = "0.4.17", features = ["std", "serde", "kv_unstable", "kv_unstable_serde"] }
redis = { git = "https://github.com/mitsuhiko/redis-rs.git", features = [
    "connection-manager",
    "tokio-comp",
    "connection-manager",
    "tokio-native-tls-comp",
] }
tokio = { version = "1.19.2", features = [
    "full",
    "winapi",
    "tracing",
    "sync",
    "macros",
] }
