[package]
name = "red_update-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.1"
serde_json = "1.0.82"
#log = { version = "0.4.17", features = ["std", "serde", "kv_unstable", "kv_unstable_serde"] }
redis = { version = "0.21.5", features = [
    "connection-manager",
    "tokio-comp",
    "tokio-native-tls-comp",
] }
tokio = { version = "1.19.2", features = ["full", "winapi", "sync", "macros"] }
